--- a/index.html
+++ b/index.html
@@ -316,6 +316,10 @@ left: 20px;
     <audio id="gameOverSound13" src="sounds/gameOver13.mp3"></audio>
     <audio id="gameOverSound14" src="sounds/gameOver14.mp3"></audio>
     <audio id="gameOverSound15" src="sounds/gameOver15.mp3"></audio>
+    <audio id="gameOverSound16" src="sounds/gameOver16.mp3"></audio>
+    <audio id="gameOverSound17" src="sounds/gameOver17.mp3"></audio>
+    <audio id="gameOverSound18" src="sounds/gameOver18.mp3"></audio>
+    <audio id="gameOverSound19" src="sounds/gameOver19.mp3"></audio>
 
 
     <audio id="itemPickupSound" src="sounds/itemPickup1.mp3"></audio>
@@ -333,6 +337,11 @@ left: 20px;
     <audio id="itemPickupSound13" src="sounds/itemPickup13.mp3"></audio>
     <audio id="itemPickupSound14" src="sounds/itemPickup14.mp3"></audio>
     <audio id="itemPickupSound15" src="sounds/itemPickup15.mp3"></audio>
+    <audio id="itemPickupSound16" src="sounds/itemPickup16.mp3"></audio>
+    <audio id="itemPickupSound17" src="sounds/itemPickup17.mp3"></audio>
+    <audio id="itemPickupSound18" src="sounds/itemPickup18.mp3"></audio>
+    <audio id="itemPickupSound19" src="sounds/itemPickup19.mp3"></audio>
+        
     <audio id="bgm" src="sounds/bgm.mp3" loop></audio>
     </body>
 
@@ -381,7 +390,10 @@ const gameOverSounds = [
     { sound: document.getElementById('gameOverSound12'), phrase: "小林敏先生:まだまだ" },
     { sound: document.getElementById('gameOverSound13'), phrase: "教頭先生:あぁあやられちゃったもう一回やろ" },
     { sound: document.getElementById('gameOverSound14'), phrase: "関澤先生:ｳｯ!!" },
-    { sound: document.getElementById('gameOverSound14'), phrase: "Tスピン爺:IRP (安らかに眠れ)" },
+    { sound: document.getElementById('gameOverSound15'), phrase: "松田先生:You are died" },
+    { sound: document.getElementById('gameOverSound16'), phrase: "原先生:やっちまったな" },
+    { sound: document.getElementById('gameOverSound17'), phrase: "校長先生:NEXT!!" },
+    { sound: document.getElementById('gameOverSound18'), phrase: "" },
 ].filter(item => item.sound !== null);
 
 const itemPickupSounds = [
@@ -1220,3 +1232,4 @@ gameLoop();
     </script>
 </body>
 </html>
+
